<?xml version="1.0"?>
<package format="3">
  <name>udp_to_drive</name>
  <version>0.0.1</version>
  <description>Bridge node for sending drive-start command to Raspberry Pi</description>

  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

